# Quilt

./: .gitignore  README.md  pyproject.toml  quilt_theme.json  run.py
src/quilt/: cli.py  main.py  styles.py  utils.py  widgets.py  workspace.py
src/quilt/ui/: colors.py  utils.py  widgets.py  windows.py
styles/: big-button-style.qss  quilt-style.qss
